[metadata]
name = easyget
version = 0.0.0
description = Dead easy interface for executing many HTTP requests asynchronously.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
author = Josh Levy-Kramer
url = https://github.com/joshlk/easyget
download_urls = https://pypi.org/project/easyget
project_urls =
	Documentation = https://joshlk.github.io/easyget
	Code = https://github.com/joshlk/easyget
	Issue tracker = https://github.com/joshlk/easyget/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Internet :: WWW/HTTP
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
zip_safe = False
python_requires = >=3.6
packages = find:
