[metadata]
name = many_requests
version = 0.1.0
description = Dead easy interface for executing many HTTP requests asynchronously. Also provides helper functions for executing embarrassingly parallel async coroutines.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
author = Josh Levy-Kramer
url = https://github.com/joshlk/many_requests
download_urls = https://pypi.org/project/many_requests
project_urls =
	Documentation = https://joshlk.github.io/many_requests
	Code = https://github.com/joshlk/many_requests
	Issue tracker = https://github.com/joshlk/many_requests/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Internet :: WWW/HTTP
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
zip_safe = False
python_requires = >=3.6
packages = find:
